2013-05-05  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.16

2013-05-05  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-filter-best.c (filter_filter): Reset the linelen
	state to 0 when we encounter a '\n'.

2013-05-04  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-part-iter.c: Modified to work for non-multipart
	messages.

2013-05-04  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (rfc2047_encode): Respect the new
	GMIME_ENABLE_USE_ONLY_USER_CHARSETS initialization flag.

	* gmime/gmime.h: Define a new GMIME_ENABLE_USE_ONLY_USER_CHARSETS
	initialization flag.

2013-04-05  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (header_fold_tokens): New internal function
	that replaces the older header_fold() function. This new one uses
	the rfc2047 tokenizer so that we share the same rfc2047 workaround
	logic in the tokenizer.

	Fixes bug #697407

2013-02-23  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-filter-html.c: Disable g_warnings unless warnings
	are enabled in the build.

2013-02-19  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.15

2013-02-19  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-filter-html.c (html_convert): Fixed to convert the
	last line of input even if it doesn't end with a \n.

2013-02-18  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.14

2013-02-18  Jeffrey Stedfast  <fejj@gnome.org>

	* util/url-scanner.c (url_addrspec_start): Fixed the logic to
	actually scan for the beginning of the mailbox.

2012-12-09  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.13

2012-11-26  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-header.c (g_mime_header_iter_first): Make sure the
	list isn't empty.
	(g_mime_header_iter_last): Same.

2012-11-23  Jeffrey Stedfast  <fejj@gnome.org>
